feat: quantity restrictions
- option to define quantity restrictions for target selections
- added
more docs
- deprecated `ActionDescription.targetType` -> moved to
`ActionDescription.targetSelection.targetType`
- deprecated
`ActionDescription.targetSelectionTemplates` -> moved to
`ActionDescription.targetSelection.selectionTemplates`
